# my_satacc_project

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  log.txt
docker_files/: Dockerfile
large_files/cnfs/: ASG_96_len112_known_last12_2.cnf  Bibd-sc-10-03-08_c18.cnf  Grain_no_init_ver1_out200_known_last104_0.cnf  Haystacks-ext-12_c18.cnf  MM-23-2-2-2-2-3.cnf  Mickey_out250_known_last146_0.cnf  QuasiGroup-4-12_c18.cnf  Trivium_no_init_out350_known_last142_1.cnf  b1904P1-8x8c6h5SAT.cnf  b1904P3-8x8c11h0SAT.cnf  eqsparcl10bpwtrc10.cnf  eqspdtlf14bpwtrc14.cnf  eqspwtrc16bparrc16.cnf  files.txt  hcp_CP20_20.cnf  hcp_CP24_24.cnf  hcp_bij16_16.cnf  knight_20.cnf  sha1r17m145ABCD.cnf  sha1r17m148ABCD_p.cnf  sha1r17m72a.cnf  size_4_4_4_i0418_r8.cnf  size_5_5_5_i003_r12.cnf  toughsat_23bits_0.cnf  toughsat_25bits_1.cnf  toughsat_28bits_0.cnf  toughsat_30bits_0.cnf
large_files/new_save_checkpoints/Grain_no_init_ver1_out200_known_last104_0.cnf/: Grain_no_init_ver1_out200_known_last104_0.cnf.checkpint
large_files/new_save_checkpoints/Haystacks-ext-12_c18.cnf/: Haystacks-ext-12_c18.cnf.checkpint
large_files/new_save_checkpoints/MM-23-2-2-2-2-3.cnf/: MM-23-2-2-2-2-3.cnf.checkpint
large_files/new_save_checkpoints/Mickey_out250_known_last146_0.cnf/: Mickey_out250_known_last146_0.cnf.checkpint
large_files/new_save_checkpoints/QuasiGroup-4-12_c18.cnf/: QuasiGroup-4-12_c18.cnf.checkpint
large_files/new_save_checkpoints/Trivium_no_init_out350_known_last142_1.cnf/: Trivium_no_init_out350_known_last142_1.cnf.checkpint
large_files/new_save_checkpoints/b1904P1-8x8c6h5SAT.cnf/: b1904P1-8x8c6h5SAT.cnf.checkpint
large_files/new_save_checkpoints/b1904P3-8x8c11h0SAT.cnf/: b1904P3-8x8c11h0SAT.cnf.checkpint
large_files/new_save_checkpoints/eqsparcl10bpwtrc10.cnf/: eqsparcl10bpwtrc10.cnf.checkpint
large_files/new_save_checkpoints/eqspdtlf14bpwtrc14.cnf/: eqspdtlf14bpwtrc14.cnf.checkpint
large_files/new_save_checkpoints/eqspwtrc16bparrc16.cnf/: eqspwtrc16bparrc16.cnf.checkpint
large_files/new_save_checkpoints/hcp_CP20_20.cnf/: hcp_CP20_20.cnf.checkpint
large_files/new_save_checkpoints/hcp_CP24_24.cnf/: hcp_CP24_24.cnf.checkpint
large_files/new_save_checkpoints/hcp_bij16_16.cnf/: hcp_bij16_16.cnf.checkpint
large_files/new_save_checkpoints/knight_20.cnf/: knight_20.cnf.checkpint
large_files/new_save_checkpoints/sha1r17m145ABCD.cnf/: sha1r17m145ABCD.cnf.checkpint
large_files/new_save_checkpoints/sha1r17m72a.cnf/: sha1r17m72a.cnf.checkpint
large_files/new_save_checkpoints/size_4_4_4_i0418_r8.cnf/: size_4_4_4_i0418_r8.cnf.checkpint
large_files/new_save_checkpoints/size_5_5_5_i003_r12.cnf/: size_5_5_5_i003_r12.cnf.checkpint
large_files/new_save_checkpoints/toughsat_28bits_0.cnf/: toughsat_28bits_0.cnf.checkpint
large_files/new_save_checkpoints/toughsat_30bits_0.cnf/: toughsat_30bits_0.cnf.checkpint
run_scripts/: archive.py  init_config.py  read_json.py  run_all.py
run_scripts/template/: satacc_config.toml
rust_macros/: Cargo.toml
rust_macros/src/: lib.rs  main.rs
rusttools/: CMakeLists.txt  Cargo.toml  cbindgen.toml  final_result_histo.json  rust_tools_wrapper.cc  rust_tools_wrapper.hpp  rusttools.h  satacc_config.toml  satacc_config_sample.toml
rusttools/config/: satacc_config.toml
rusttools/src/: config.rs  lib.rs  macros.rs  sim.rs  test_utils.rs
rusttools/src/satacc/: clause.rs  icnt.rs  mod.rs  satacc_minisat_task.rs  simulator.rs  statistics.rs  trail.rs  watcher.rs  watcher_interface.rs  wating_task.rs
rusttools/src/satacc/cache/: cache_with_fix_time.rs  cache_with_ramulator.rs  fast_cache.rs  mod.rs
rusttools/src/satstat/: mod.rs
