[package]
edition = "2021"
name = "rusttools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
libc = "0.2.127"
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
toml = "0.5.9"
[lib]
crate-type = ["staticlib"]
