[package]
edition = "2021"
name = "rusttools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.5.1"
env_logger = "0.9.0"
eyre = "0.6.8"
libc = "0.2.127"
log = "0.4.17"
ramulator_wrapper = "0.2.4"
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
toml = "0.5.9"
[lib]
crate-type = ["staticlib"]
