[package]
edition = "2021"
name = "rusttools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.22"
enum-as-inner = "0.5.1"
eyre = "0.6.8"
libc = "0.2.127"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ramulator_wrapper = "0.2.5"
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
# time = {version= "0.3.13",features=["local-offset","macros"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = {version="0.3.15", features=["env-filter"]}
# tracing-subscriber = {version="0.3.15"}
[lib]
crate-type = ["staticlib"]
# enable lto for release
[profile.release]
lto = true
